button: add overflow, docs: fix for ie11

--- a/src/components/button/button.less
+++ b/src/components/button/button.less
@@ -19,6 +19,7 @@
     cursor: pointer;
     outline: none;
     position: relative;
+    overflow: visible;
 
     .icon + .caption {
         margin-left: 8px;
